--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    /* Adding default scrollbar prevents jittering when navigating */
+    overflow-y: scroll;
+}
